# Studies

./: .gitignore
1주차 실습/: CMakeLists.txt  a.txt
2주차 실습/: CMakeLists.txt
3주차 실습/: CMakeLists.txt  conanfile.txt  test_main.cpp
4주차 실습/: CMakeLists.txt
6주차 실습/: CMakeLists.txt  conanfile.py  conanfile.txt  test_main.cpp
7주차 실습/: CMakeLists.txt  CMakePresets.json
